--- a/main.css
+++ b/main.css
@@ -3,58 +3,31 @@
 	margin : auto ;
 }
 
-#projects{
-	margin-top : 30px ;
-	padding : 0;
-	box-shadow: rgba(0,0,0,0.5) 0px 0px 15px;
+/* Projects */
+.mainProject {
 }
 
-
-#projects .row-fluid{
-	padding-left : 5px;
-	padding-right : 5px;
+.mainProject img {
+	width : 500px ;
+	border : solid #EEE 1px;
 }
 
-#projects .span4{
-	margin-left : 0px;
-	height : 250px;
-	position : relative;
+/* Skills */
+
+.skill{
+	height : 35px ;
 }
 
-#projects h3{
-	color : white;
-	background-color : black ;
-	background-color : rgba(0,0,0,0.5);
-	text-shadow : black 1px 1px 2px;
-	padding-left : 5px ;
+#skills h4{
+	margin-top : 0 ;
+	margin-bottom : 5px;
+	font-size : 1.5em ;
+	text-align : center;
+	cursor: pointer ;
 }
 
-#projects p {
-	font-size: 16px ;
-	line-height: 18px ;
-	text-align : justify;
-	padding-left : 8px ;
-	padding-right : 8px ;
-	-webkit-transition : all linear 0.2s;
-	opacity : 0;
-}
-
-#projects img{
-	position : absolute;
-	-webkit-transition : all linear 0.2s;
-}
-
-#projects .span4:hover img{
-	-webkit-filter : blur(10px);
-	opcity : 0.3;
-}
-
-#projects .span4:hover p{
-	opacity: 1;
-}
-
-#projects .description{
-	position : absolute;
+#skills h4:hover{
+	font-size : 2em ;
 }
 
 /* CV */
@@ -88,8 +61,3 @@
 }
 
 /* skills */
-
-.skill{
-	height : 50px ;
-	width : 50px ;
-}
