--- a/impro/main.css
+++ b/impro/main.css
@@ -187,6 +187,10 @@ h1.page-header{
 	font-size : 1.2em;
 }
 
+#did-you-know{
+	cursor : pointer;
+}
+
 #network-container{
 	background : #34495E;
 	padding-top : 140px;
